# VoxeraOS

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  CHANGELOG.md  CODEX.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  PROJECT_ANALYSIS.md  README.md  REPORT.md  SECURITY.md  mypy.ini  pyproject.toml
.github/: CODEOWNERS
config-templates/: config.example.yml
voxera-os-scaffold/voxera-os/: Makefile  NOTICE  README.md  pyproject.toml
voxera-os-scaffold/voxera-os/.github/workflows/: quality-gates.yml
voxera-os-scaffold/voxera-os/config-templates/: config.example.yml  policy.example.yml
voxera-os-scaffold/voxera-os/deploy/systemd/user/: voxera-daemon.service  voxera-panel.service
voxera-os-scaffold/voxera-os/docs/: ARCHITECTURE.md  CODEX_MEMORY.md  LOCAL_MODELS.md  REPO_REVIEW_REPORT_2026-02-16T000000Z.md  ROADMAP.md  UBUNTU_TESTING.md  ops.md
voxera-os-scaffold/voxera-os/missions/: README.md
voxera-os-scaffold/voxera-os/skills/clipboard/paste/: manifest.yml
voxera-os-scaffold/voxera-os/skills/files/write_text/: manifest.yml
voxera-os-scaffold/voxera-os/skills/sandbox/exec/: manifest.yml
voxera-os-scaffold/voxera-os/skills/system/open_app/: manifest.yml
voxera-os-scaffold/voxera-os/skills/system/open_url/: manifest.yml
voxera-os-scaffold/voxera-os/skills/system/set_volume/: manifest.yml
voxera-os-scaffold/voxera-os/skills/system/status/: manifest.yml
voxera-os-scaffold/voxera-os/src/voxera/: cli.py  config.py  doctor.py  models.py  paths.py  policy.py  secrets.py  setup_wizard.py
voxera-os-scaffold/voxera-os/src/voxera/brain/: __init__.py  base.py  gemini.py  openai_compat.py
voxera-os-scaffold/voxera-os/src/voxera/core/: inbox.py  mission_planner.py  missions.py  queue_daemon.py
voxera-os-scaffold/voxera-os/src/voxera/panel/: app.py
voxera-os-scaffold/voxera-os/src/voxera/panel/templates/: home.html
voxera-os-scaffold/voxera-os/src/voxera/skills/: arg_normalizer.py  execution.py  registry.py  runner.py
voxera-os-scaffold/voxera-os/src/voxera_builtin_skills/: clipboard_copy.py  clipboard_paste.py  files_write_text.py  open_app.py  open_url.py  sandbox_exec.py  set_volume.py  system_status.py
voxera-os-scaffold/voxera-os/systemd/: voxera-core.service  voxera-panel.service
voxera-os-scaffold/voxera-os/tests/: test_arg_normalizer.py  test_cli_queue.py  test_cli_version.py  test_doctor.py  test_inbox.py  test_mission_planner.py  test_missions.py  test_panel.py  test_policy.py  test_queue_daemon.py  test_registry.py  test_runner.py  test_sandbox_exec_integration.py
(+528 files in other folders)
