[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voxera-os"
version = "0.1.9"
description = "VoxeraOS: open-source queue-driven AI control plane for Linux. Alpha v0.1.9."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name="Voxera OS Contributors"}]
dependencies = [
  "tomli>=2.0; python_version < '3.11'",
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0",
  "pydantic>=2.6",
  "httpx>=0.27",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "jinja2>=3.1",
  "keyring>=25.0",
  "platformdirs>=4.2",
]

[project.optional-dependencies]
whisper = [
  "faster-whisper>=1.0,<2.0",
]
moonshine = [
  # Official Useful Sensors Moonshine PyPI package — clean semver (0.0.x).
  # The older ``useful-moonshine-onnx`` PyPI publishes date-style versions
  # (YYYYMMDD) so it cannot be pinned with a ``>=0.2,<1.0`` range and was
  # replaced upstream by this canonical package.
  "moonshine-voice>=0.0.5",
]
piper = [
  "piper-tts>=1.2,<2.0",
]
kokoro = [
  "kokoro-onnx>=0.3,<1.0",
]
dev = [
  "ruff>=0.6",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
  "pre-commit>=3.7",
]

[project.scripts]
voxera = "voxera.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
